Add email confirmation before registration new user